--- a/BookStore/Views/Book/Index.cshtml
+++ b/BookStore/Views/Book/Index.cshtml
@@ -9,3 +9,7 @@
 <p>@Model.ISBN</p>
 <p>@Model.Description</p>
 <p>Цена: <strong>@Model.Price</strong> ₽</p>
+<form action="@Url.Action("Add", "Cart")" method="post">
+    <input type="hidden" name="id" value="@Model.ID" />
+    <button class="btn btn-outline-success" type="submit">В корзину</button>
+</form>
