--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -15,6 +15,17 @@
                 <input class="form-control mr-sm-2" type="search" name="query" placeholder="Найти книгу" />
                 <button class="btn btn-outline-success my-2 my-sm-2" type="submit">Найти</button>
             </form>
+            <span class="navbar-text ml-auto">
+                @{
+                    Cart cart;
+                    if (!Context.Session.TryGetCart(out cart))
+                    {
+                        cart = new Cart();
+                    }
+                    @: Корзина: @cart.Items.Count
+                    @: Сумма: @cart.Amount
+                }
+            </span>
 
         </nav>
     </header>
