--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                 @{
                     if (Context.Session.TryGetCart(out Cart cart) && cart.TotalCount > 0)
                     {
-                        <a href="">
+                        <a href="@Url.Action("Index", "Order")">
                             Корзина: @cart.TotalCount <br />
                             Сумма: @cart.TotalPrice
                         </a>
